# pyzoopla

./: LICENSE  README.md  pyproject.toml
.github/workflows/: continuous-integration.yaml
src/pyzoopla/: __init__.py  models.py  scrapers.py  zoopla.py
src/zoopla/: __init__.py  models.py  scrapers.py  zoopla.py
tests/: test_examples.py  test_pyzoopla.py
tests/examples/: example.html  for-sale-properties.html  for-sale-regions.html  to-rent-properties-list.html  to-rent-regions.html
