[tool.poetry]
name = "pyzoopla"
version = "0.1.0"
description = "Library for accessing property information from Zoopla."
authors = ["Thomas Leese <thomas@leese.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
